# book_store

./: .gitignore  Procfile  README.md  docker-compose.yml  dockerfile  heroku.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  github-actions-demo.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/test/tests_viewset/: test_order_viewset.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/serializers/: product_serializer.py
product/test/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/tests/: __init__.py  factories.py
